--- a/image/requirements.txt
+++ b/image/requirements.txt
@@ -10,7 +10,7 @@ pdfplumber>=0.11.0
 chromadb==1.3.5
 numpy==1.26.4
 pandas>=2.2.0
-scikit-learn>=1.4.0
+scikit-learn==1.3.2
 tqdm>=4.66.0
 langchain_text_splitters
 streamlit
